@@ -1,3 +1,5 @@
+2006/1/20 -- released version 20060120_trunk
+
 2006/1/19 -- released version 20060119_trunk
 
 2006/1/18 -- released version 20060118_trunk
